3822B1FI1/4_dev_jacobi_oneapi/shulpin_ilya/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/4_dev_jacobi_oneapi/shulpin_ilya/dev_jacobi_oneapi.cpp:41:32: error: no matching function for call to 'reduction'
   41 |                 auto max_red = sycl::reduction(max_diff_dev, h, sycl::maximum<float>());
      |                                ^~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2853:6: note: candidate function template not viable: no known conversion from 'sycl::maximum<float>' to 'const property_list' for 3rd argument
 2853 | auto reduction(T *Var, BinaryOperation Combiner,
      |      ^
 2854 |                const property_list &PropList = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2880:6: note: candidate template ignored: deduced conflicting types for parameter 'T' ('float' vs. 'sycl::handler')
 2880 | auto reduction(T *Var, const T &Identity, BinaryOperation Combiner,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2837:6: note: candidate template ignored: could not match 'buffer<T, 1, AllocatorT>' against 'float *'
 2837 | auto reduction(buffer<T, 1, AllocatorT> Var, handler &CGH,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2896:6: note: candidate template ignored: could not match 'span<T, Extent>' against 'float *'
 2896 | auto reduction(span<T, Extent> Span, BinaryOperation Combiner,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2910:6: note: candidate template ignored: could not match 'span<T, Extent>' against 'float *'
 2910 | auto reduction(span<T, Extent> Span, const T &Identity,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:133:6: note: candidate template ignored: substitution failure [with T = float, BinaryOperation = sycl::handler, PropertyList = sycl::maximum<float>]: call to deleted constructor of 'sycl::handler'
  133 | auto reduction(T *var, BinaryOperation combiner, PropertyList properties)
      |      ^
  134 |     -> std::enable_if_t<detail::is_valid_reduction_prop_list<PropertyList>,
  135 |                         decltype(detail::convert_reduction_properties(
  136 |                             combiner, properties, var))> {
      |                             ~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:143:6: note: candidate template ignored: could not match 'span<T, Extent>' against 'float *'
  143 | auto reduction(span<T, Extent> vars, BinaryOperation combiner,
      |      ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:122:6: note: candidate function template not viable: requires 4 arguments, but 3 were provided
  122 | auto reduction(BufferT vars, handler &cgh, BinaryOperation combiner,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  123 |                PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:164:6: note: candidate function template not viable: requires 4 arguments, but 3 were provided
  164 | auto reduction(T *var, const T &identity, BinaryOperation combiner,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  165 |                PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:175:6: note: candidate function template not viable: requires 4 arguments, but 3 were provided
  175 | auto reduction(span<T, Extent> vars, const T &identity,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  176 |                BinaryOperation combiner, PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/reduction.hpp:2866:6: note: candidate function template not viable: requires at least 4 arguments, but 3 were provided
 2866 | auto reduction(buffer<T, 1, AllocatorT> Var, handler &CGH, const T &Identity,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 2867 |                BinaryOperation Combiner, const property_list &PropList = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/ext/oneapi/experimental/reduction_properties.hpp:153:6: note: candidate function template not viable: requires 5 arguments, but 3 were provided
  153 | auto reduction(BufferT vars, handler &cgh,
      |      ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |                const typename BufferT::value_type &identity,
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  155 |                BinaryOperation combiner, PropertyList properties)
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
